@@ -2,6 +2,7 @@
 * Allow "Get Info" on all users, by uid or username
 * Fix crash when re-logging in, if login failed.
 * Show descriptive error message if login password is too long.
+* Fake self from being online, since can't add self to buddy list.
 * Update for Libpurple 2.0.2.
 
 2007-06-14 Jeff Connelly <jeff2@homing.pidgin.im> - 0.7
